refactor: corregir hallazgos LOW de revision arquitectonica
- Eliminar @SuppressWarnings("null") de 8 clases (supresion demasiado amplia)
- Extraer PriceHistoryService del controller (respetar capa de servicio)
- CompetitorController: usar ProductService en vez de ProductRepository
- Extraer metodo toAmazonPriceDTO() y eliminar campo duplicado title
- Unificar .toList() en vez de collect(Collectors.toList())
- AdminService.createCompany() + AuthService.googleLogin(): añadir @Transactional
- AnalyticsService: añadir @Transactional a metodos pass-through
- PriceAnalysisService: eliminar variable local innecesaria
- ProductDTOs: corregir lineas en blanco inconsistentes
- AdminDTOs: añadir @Pattern validacion de rol en UpdateUserRequest y RoleChangeRequest
- UserDTOs.UserSummaryDTO: añadir productCount para alinear con AdminDTOs.UserSummary
- User.company: cambiar a nullable=true (ADMIN no tiene empresa)